--- a/src/styles.css
+++ b/src/styles.css
@@ -12,31 +12,23 @@
 
 .container {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  /* flex-direction: row; */
   justify-content: space-around;
   align-items: center;
   max-height: 100%;
-  min-width: 60em;
+  /* min-width: 60em; */
 }
 
 .left {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
   height: calc( 100vh - 10em); 
-  order: 1;
-  width: 20vw;
-  min-width: 20em;
-  position: relative;
+  /* width: 50%; */
+  width: 540px;
 }
 
 .right {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: no-wrap;
-  flex-grow: 5;
+  /* float: right; */
   height: calc( 100vh - 10em);
-  max-height: 100vh;
-  order: 2;
-  width: 80vw;
+  /* width: 50%; */
+  width: 540px;
 }
